Shifted landing header down to avoid text jump on load

--- a/css/custom_CJT.css
+++ b/css/custom_CJT.css
@@ -138,6 +138,7 @@ figcaption {
     line-height: 1;
     /*text-shadow: 0 1px 2px #000;*/
     margin-bottom: 0.1em;
+    padding-top: 30em;
 
     
 }
